# genropy-asgi

./: .gitignore  .readthedocs.yaml  CLAUDE.md  NOTICE  README.md  USAGE.md  pyproject.toml
.github/workflows/: publish.yml
docs/: Makefile  api.rst  architecture.md  architecture.rst  cli-reference.rst  composition.rst  conf.py  config-reference.md  configuration.rst  faq.rst  genropy-asgi-for-dummies.html  getting-started.rst  gnrasgiserve.md  index.rst  single-vs-multi.rst  troubleshooting.rst
docs/internal/: legacy_daemon_role.md  performance_analysis.md  pool-internals.rst  step1_implementation_plan.md  step1_spawner_design.md
examples/: multiworker_config.py
src/genropy_asgi/: __init__.py  cli.py  commander_config.py  genropy_config.py  genropy_db.py  genropy_proxy.py  registry_handler.py  server.py  worker_commander.py  worker_entry.py  worker_orchestrator.py  worker_services.py
src/genropy_asgi/monitor/: __init__.py  monitor_app.py
src/genropy_asgi/proxy/: __init__.py  genropy_proxy.py
src/genropy_asgi/siteregister/: __init__.py  exceptions.py  handler.py  processes.py  service.py  siteregister.py  siteregister_client.py
src/genropy_asgi/spa/: __init__.py  cli.py  config.py  genropy_commander_application.py  genropy_spa_application.py  genropy_worker_application.py  siteregister_client.py
tests/: test_cli_multiworker_e2e.py  test_genropy_proxy.py  test_genropy_spa_application.py  test_global_store_rail.py  test_legacy_e2e.py  test_monitor_app.py  test_register_client_units.py  test_registry_handler.py  test_worker_application.py  test_worker_commander.py  test_worker_orchestrator.py  test_worker_services.py
